[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arms-engine"
dynamic = ["version"]
description = "ARMS Multi-Agent Orchestration Engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ARMS Development Team"}
]
dependencies = [
    "pyyaml",
]

[project.scripts]
# Keep the historical entrypoint stable; init_arms.py is now a thin compatibility shim over the split init modules.
arms = "arms_engine.init_arms:main"
arms-docs = "arms_engine.update_docs:main"

[tool.setuptools]
packages = ["arms_engine"]

[tool.setuptools.package-data]
# Ship the engine-owned source instructions as ENGINE.md; arms init deploys this file into projects as .arms/ENGINE.md.
arms_engine = ["agents/*.md", "agents.yaml", "skills/**/*", "workflow/*", "ENGINE.md", "AGENTS.md"]

[tool.setuptools_scm]
write_to = "arms_engine/_version.py"
